--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ project2/.elasticbeanstalk
 project1/.DS_Store
 project2/.DS_Store
 project2/node_modules
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
