--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 project2/.elasticbeanstalk
 project1/.DS_Store
 project2/.DS_Store
+project2/src/.DS_Store
 project2/node_modules
 
 # Elastic Beanstalk Files
