--- a/project2/udacity-c2-project.postman_collection.json
+++ b/project2/udacity-c2-project.postman_collection.json
@@ -1,17 +1,23 @@
 {
 	"info": {
-		"_postman_id": "4bcf1909-8996-44b7-be35-b130ab03d12f",
-		"name": "cloud-cdnd-c2-final",
+		"_postman_id": "451c6c18-42ae-4d98-89fa-711e39b901a2",
+		"name": "udacity-c2-project",
 		"schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json"
 	},
 	"item": [
 		{
-			"name": "http://localhost:8082/filteredimage?image_url=https://timedotcom.files.wordpress.com/2019/03/kitten-report.jpg",
+			"name": "http://{{HOST}}/filteredimage?image_url=https://dclmcloud.s3.amazonaws.com/webcast/img/logo.png",
 			"request": {
 				"method": "GET",
-				"header": [],
+				"header": [
+					{
+						"key": "Content-Type",
+						"value": "image/png",
+						"type": "text"
+					}
+				],
 				"url": {
-					"raw": "http://{{HOST}}/filteredimage?image_url=https://timedotcom.files.wordpress.com/2019/03/kitten-report.jpg",
+					"raw": "http://{{HOST}}/filteredimage?image_url=https://dclmcloud.s3.amazonaws.com/webcast/img/logo.png",
 					"protocol": "http",
 					"host": [
 						"{{HOST}}"
@@ -22,7 +28,13 @@
 					"query": [
 						{
 							"key": "image_url",
-							"value": "https://timedotcom.files.wordpress.com/2019/03/kitten-report.jpg"
+							"value": "https://upload.wikimedia.org/wikipedia/commons/9/94/Dove_of_the_Holy_Spirit.png",
+							"description": "The Holy Spirit dove",
+							"disabled": true
+						},
+						{
+							"key": "image_url",
+							"value": "https://dclmcloud.s3.amazonaws.com/webcast/img/logo.png"
 						}
 					]
 				}
@@ -34,7 +46,6 @@
 		{
 			"listen": "prerequest",
 			"script": {
-				"id": "5887df52-1889-4e1f-82ee-054ab37b450a",
 				"type": "text/javascript",
 				"exec": [
 					""
@@ -44,7 +55,6 @@
 		{
 			"listen": "test",
 			"script": {
-				"id": "5e332dfe-c833-430b-b947-ab6c00311c28",
 				"type": "text/javascript",
 				"exec": [
 					""
@@ -54,7 +64,6 @@
 	],
 	"variable": [
 		{
-			"id": "1df3d31a-de30-494b-a3d0-f1228dd8713c",
 			"key": "HOST",
 			"value": "localhost:8082",
 			"type": "string"
