--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ project1/udacity-starter-website/vendor/fontawesome-free/.DS_Store
 .gitignore
 project1/udacity-starter-website/vendor/.DS_Store
 project1/udacity-starter-website/.DS_Store
+project1/.DS_Store
+project1/udacity-starter-website/.DS_Store
