--- a/project3/.travis.yml
+++ b/project3/.travis.yml
@@ -1,1 +1,31 @@
 #
+language: node_js
+node_js:
+  - 12
+
+services:
+  - docker
+
+# Pre-testing installs
+install:
+  - echo "nothing needs to be installed"
+
+# Scripts to be run such as tests
+before_script:
+  - docker --version # print the version for logging
+  - docker -v
+  - docker-compose -v
+
+script:
+  - docker image prune --all
+  - docker-compose -f docker-compose-build.yaml build --parallel
+     
+# Tasks to perform after the process is successful. 
+# Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
+after_success:
+# Push images
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker push opeoniye/udagram-frontend
+  - docker push opeoniye/udagram-api-feed
+  - docker push opeoniye/udagram-api-user
+  - docker push opeoniye/udagram-reverseproxy
