--- a/project3/docker-compose-build.yaml
+++ b/project3/docker-compose-build.yaml
@@ -3,16 +3,16 @@ services:
   reverseproxy:
     build:
       context: ./reverseproxy
-    image: udagram-reverseproxy
+    image: opeoniye/udagram-reverseproxy
   api_user:
     build:
       context: ./api-user
-    image: udagram-api-user
+    image: opeoniye/udagram-api-user
   api_feed:
     build:
       context: ./api-feed
-    image: udagram-api-feed
+    image: opeoniye/udagram-api-feed
   frontend:
     build:
       context: ./frontend
-    image: udagram-frontend:local
+    image: opeoniye/udagram-frontend:local
