--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # nginx reverseproxy
   reverseproxy:
       container_name: reverseproxy
-      image: udagram-reverseproxy
+      image: opeoniye/udagram-reverseproxy
       ports:
           - 8080:8080
       restart: always
@@ -15,7 +15,7 @@ services:
   # user api backend service
   api-user:
     container_name: api-user
-    image: udagram-api-user
+    image: opeoniye/udagram-api-user
     environment:
       POSTGRES_USERNAME: $POSTGRES_USERNAME
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
@@ -30,7 +30,7 @@ services:
   # feed api backend service
   api-feed:
     container_name: api-feed
-    image: udagram-api-feed
+    image: opeoniye/udagram-api-feed
     volumes:
       - $HOME/.aws:/root/.aws
     environment:
@@ -47,6 +47,6 @@ services:
   # frontend service    
   frontend:
     container_name: frontend
-    image: udagram-frontend:local
+    image: opeoniye/udagram-frontend:local
     ports:
       - "8100:80"
