--- a/docker-compose-build.yaml
+++ b/docker-compose-build.yaml
@@ -15,4 +15,4 @@ services:
   frontend:
     build:
       context: ./project3/frontend
-    image: opeoniye/udagram-frontend:local
+    image: opeoniye/udagram-frontend
