--- a/project3/kubernetes/api-user-service.yaml
+++ b/project3/kubernetes/api-user-service.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: api-user
   labels:
-    service: reverseproxy
-  name: reverseproxy
+    app: api-user
 spec:
   ports:
   - name: "8080"
     port: 8080
     targetPort: 8080
   selector:
-    service: reverseproxy
-  type: LoadBalancer
+    app: api-user 
