--- a/project3/kubernetes/reverseproxy-deployment.yaml
+++ b/project3/kubernetes/reverseproxy-deployment.yaml
@@ -1,9 +1,9 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    service: reverseproxy
   name: reverseproxy
+  labels:
+    app: reverseproxy
 spec:
   replicas: 1
   selector:
@@ -12,12 +12,13 @@ spec:
   template:
     metadata:
       labels:
+        app: reverseproxy
         service: reverseproxy
     spec:
       containers:
-      - image: opeoniye/reverse-proxy
+      - image: opeoniye/udagram-reverseproxy:latest
         name: reverseproxy
-        imagePullPolicy: Always          
+        imagePullPolicy: Always
         resources:
           requests:
             memory: "64Mi"
