--- a/project3/kubernetes/aws-secret.yaml
+++ b/project3/kubernetes/aws-secret.yaml
@@ -4,5 +4,4 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  credentials:  
-  YXdzX2FjY2Vzc19rZXlfaWQgPSBBS0lBMllIVFZORUhDNURUQldPMwphd3Nfc2VjcmV0X2FjY2Vzc19rZXkgPSAwdllnV0hRd2xLOE5BNDJkN0FLeE1DcjdTaDBXV0hDNjFZUm9GTnFxCg==
+  credentials: YXdzX2FjY2Vzc19rZXlfaWQgPSBBS0lBMllIVFZORUhDNURUQldPMwphd3Nfc2VjcmV0X2FjY2Vzc19rZXkgPSAwdllnV0hRd2xLOE5BNDJkN0FLeE1DcjdTaDBXV0hDNjFZUm9GTnFxCg==
