--- a/project3/kubernetes/env-secret.yaml
+++ b/project3/kubernetes/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: dHJvdXZpbmV6Cg==
-  POSTGRES_PASSWORD: QXB0ZXJ5eDAyCg==
+  POSTGRES_USERNAME: cG9zdGdyZXM=
+  POSTGRES_PASSWORD: YmFtc3VkYWNpdHk=
