--- a/project3/kubernetes/cluster.yaml
+++ b/project3/kubernetes/cluster.yaml
@@ -5,16 +5,9 @@ metadata:
   name: bams
   region: us-east-1
 
-#vpc:
-#  subnets:
-#    private:
-#      us-east-1a: { id: subnet-0f76a21608d20c424 }
-#      us-east-1b: { id: subnet-039f7275dd42949b3 }
-#      us-east-1c: { id: subnet-02e5c9125a39d14a4 }
-
 nodeGroups:
-  - name: bams-node
-    instanceType: t3.micro
+  - name: bams-1
+    instanceType: m5.large  # t3.micro 4 $0.0104, m5.large 4 $0.096
     desiredCapacity: 2
     volumeSize: 20
     ssh:
