--- a/project3/kubernetes/frontend-deployment.yaml
+++ b/project3/kubernetes/frontend-deployment.yaml
@@ -17,16 +17,16 @@ spec:
         api: external        
     spec:
       containers:
-      - image: opeoniye/udagram-frontend:latest
+      - image: opeoniye/udagram-frontend:v1
         name: frontend
         imagePullPolicy: Always          
         ports:
         - containerPort: 80
         resources:
           requests:
-            memory: "64Mi"
+            memory: "100Mi"
             cpu: "250m"
           limits:
             memory: "1024Mi"
-            cpu: "500m"                
+            cpu: "400m"                
       restartPolicy: Always
