--- a/project3/kubernetes/api-feed-service.yaml
+++ b/project3/kubernetes/api-feed-service.yaml
@@ -3,12 +3,14 @@ kind: Service
 metadata:
   name: api-feed
   labels:
-    service: api-feed
+    app: api-feed
 
 spec:
   ports:
-  - name: "8080"
-    port: 8080
+  - port: 8080
+    protocol: TCP
     targetPort: 8080
   selector:
-    service: api-feed
+    app: api-feed
+  sessionAffinity: None
+  type: ClusterIP
