--- a/project3/kubernetes/frontend-service.yaml
+++ b/project3/kubernetes/frontend-service.yaml
@@ -1,14 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    service: frontend
   name: frontend
+  labels:
+    app: frontend
+
 spec:
   ports:
-  - name: "8100"
-    port: 8100
+  - port: 8100
+    protocol: TCP
     targetPort: 80
   selector:
-    service: frontend
+    app: frontend
+  sessionAffinity: None
   type: LoadBalancer
