--- a/project3/kubernetes/reverseproxy-service.yaml
+++ b/project3/kubernetes/reverseproxy-service.yaml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    service: reverseproxy
   name: reverseproxy
+  labels:
+    app: reverseproxy
+
 spec:
   ports:
-  - name: "8080"
-    port: 8080
+  - port: 8080
+    protocol: TCP
     targetPort: 8080
   selector:
-    service: reverseproxy
+    app: reverseproxy
   type: LoadBalancer
