--- a/4-project/frontend/package.json
+++ b/4-project/frontend/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dateformat": "^3.0.3",
-    "immutability-helper": "^3.0.0",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -27,7 +27,7 @@
     "typescript": ">=3.8.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
